first User interface for testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/static/css/style.css" />
   </head>
 
   <body>
@@ -23,7 +24,8 @@
       <!-- place navbar here -->
     </header>
     <main>
-      <div class="display-1">Real-time action detection</div>
+      <img src="/static/images/logo.gif" alt="Detecting" id="logoImage" />
+      <div class="display-5 title">Real-time action detection</div>
     </main>
     <footer>
       <!-- place footer here -->
