Learnign Routes, Form request response.

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,11 @@
       <!-- place navbar here -->
     </header>
     <main>
-      <img src="/static/images/logo.gif" alt="Detecting" id="logoImage" />
-      <div class="display-5 title">Real-time action detection</div>
+      <div class="container text-center">
+        <img src="/static/images/logo.gif" alt="Detecting" id="logoImage" />
+        <div class="display-5 title">Real-time action detection</div>
+        <a class="btn btn-primary my-3" href="/form" role="button">Fill Form</a>
+      </div>
     </main>
     <footer>
       <!-- place footer here -->
